[package]
name = "ord-brc20"
description = "Ord indexer for BRC20"
version = "0.14.0-5"
license = "CC0-1.0"
edition = "2021"
autotests = false
homepage = "https://github.com/alexgo-io/ord-brc20"
repository = "https://github.com/alexgo-io/ord-brc20"
autobins = false
rust-version = "1.85"

[workspace]
members = [".", "test-bitcoincore-rpc"]

[dependencies]
anyhow = { version = "1.0.97", features = ["backtrace"] }
async-trait = "0.1.88"
base64 = "0.22.1"
bip39 = "2.1.0"
bitcoin = { version = "0.30.2", features = ["rand"] }
brotli = "3.4.0"
chrono = { version = "0.4.40", features = ["serde"] }
ciborium = "0.2.2"
clap = { version = "4.5.32", features = ["derive"] }
ctrlc = { version = "3.4.5", features = ["termination"] }
derive_more = { version = "2.0.1", features = ["full"] }
dirs = "6.0.0"
env_logger = "0.11.7"
futures = "0.3.31"
hex = "0.4.3"
http = "1.3.1"
hyper = { version = "0.14.24", features = ["client", "http2", "tcp"] }
indicatif = "0.17.11"
lazy_static = "1.5.0"
log = "0.4.27"
miniscript = "10.2.0"
mp4 = "0.14.0"
redb = "2.4.0"
regex = "1.11.1"
ring = "0.17.14"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde_yaml = "0.9.33"
sha3 = "0.10.8"
sysinfo = "0.33.1"
tempfile = "3.19.1"
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }

[dependencies.ord-bitcoincore-rpc]
package = "ord-bitcoincore-rpc"
git = "https://github.com/alexgo-io/ord-bitcoincore-rpc.git"
rev = "395cb9e1044b3696cefc0e3d96bd0187ed108e45"

[dev-dependencies]
executable-path = "1.0.0"
pretty_assertions = "1.2.1"
reqwest = { version = "0.12.15", features = ["blocking", "brotli", "json"] }
test-bitcoincore-rpc = { path = "test-bitcoincore-rpc" }

[[bin]]
name = "ord"
path = "src/bin/main.rs"

[lib]
name = "ord"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/lib.rs"

[target.'cfg(not(any(target_os = "macos", target_os="windows", target_arch = "arm")))'.dependencies]
tikv-jemallocator = "0.6.0"

[workspace.metadata.cross.target.x86_64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/x86_64-unknown-linux-gnu:main-centos"

[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
image = "ghcr.io/cross-rs/aarch64-unknown-linux-gnu:main-centos"
